# bmi-calculator-python

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: bmi_calculator.rst  bmigraph.rst  modules.rst
src/bmi_calculator/: __init__.py  calculate_bmi.py  exercise_plan.py  project_bmi.py  project_calories.py
src/bmigraph/: __init__.py  calculate_bmi.py  exercise_plan.py
tests/: test_bmi_calculator.py
tests/bmi_calculator/: test_calculate_bmi.py  test_exercise_plan.py  test_project_bmi.py  test_project_calories.py
tests/bmigraph/: test_calculate_bmi.py  test_exercise_plan.py  test_project_bmi.py  test_project_calories.py
